--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,32 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".Accessories5_3"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories5_2"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories5_1"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories4_3"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories4_2"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories4_1"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories3_3"
+            android:exported="false"
+            android:label="@string/title_activity_accessories33"
+            android:theme="@style/Theme.MyApplication.NoActionBar" />
+        <activity
+            android:name=".Accessories3_2"
+            android:exported="false" />
+        <activity
             android:name=".Accessories2_3"
             android:exported="false" />
         <activity
