--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,115 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+
+        <activity
+            android:name=".Accessories5_3"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories5_2"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories5_1"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories4_3"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories4_2"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories4_1"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories3_3"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories3_2"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories2_3"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories2_2"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories3_1"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories2_1"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories1_3"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories1_2"
+            android:exported="false" />
+        <activity
+            android:name=".Accessories1_1"
+            android:exported="false" />
+        <activity
+            android:name=".comput"
+            android:exported="false" />
+        <activity
+            android:name=".homepage"
+            android:exported="false" />
+        <activity
+            android:name=".phoneDetail"
+            android:exported="false" />
+        <activity
+            android:name=".phoneActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ipadpro"
+            android:exported="false" />
+        <activity
+            android:name=".ipad"
+            android:exported="false" />
+        <activity
+            android:name=".applepad"
+            android:exported="false" />
+        <activity
+            android:name=".macbookpro"
+            android:exported="false" />
+        <activity
+            android:name=".macbookair"
+            android:exported="false" />
+        <activity
+            android:name=".aaplelaptop"
+            android:exported="false" />
+        <activity
+            android:name=".imac24"
+            android:exported="false" />
+        <activity
+            android:name=".imac27"
+            android:exported="false" />
+        <activity
+            android:name=".applecomputer"
+            android:exported="false" />
+        <activity
+            android:name=".AcerIconiaTabA500"
+            android:exported="false" />
+        <activity
+            android:name=".AcerA3A301375"
+            android:exported="false" />
+        <activity
+            android:name=".acerpad"
+            android:exported="false" />
+        <activity
+            android:name=".AcerA51545R2B5"
+            android:exported="false" />
+        <activity
+            android:name=".AcerAspire5A51543R19L"
+            android:exported="false" />
+        <activity
+            android:name=".acerlaptop"
+            android:exported="false" />
+        <activity
+            android:name=".AcerTC1650"
+            android:exported="false" />
+        <activity
+            android:name=".AcerN50610"
+            android:exported="false" />
         <activity
             android:name=".comput"
             android:exported="false" />
